# AUA-Veritas

./: .gitignore  README.md  build-dmg.sh  build-mac.sh  commit-untracked.sh  diagnose-corrections.sh  diagnose.sh  electron-builder.json  fix-all-and-rebuild-dmg.sh  fix-and-build.sh  fix-diverged.sh  hotfix.sh  launch-electron.sh  package-lock.json  package.json  pull-latest.sh  pyproject.toml  rebuild-backend.sh  requirements.txt  reset-and-launch.sh  resume-build.sh  roadmap.md  sync-from-remote.sh  update-and-launch.sh
api/: main.py
assets/: README.md  icon.icns
core/: arbiter.py  confidence_updater.py  config.py  correction_loop.py  field_classifier.py  guard.py  hooks.py  include_utility.py  interfaces.py  memory.py  memory_extractor.py  policy.py  restart_prompt.py  router.py  scope_resolver.py  secrets.py  session.py  state.py  store_utility.py  trigger_detector.py  utility_scorer.py  validator.py
core/plugins/: anthropic_backend.py  deepseek_backend.py  google_backend.py  groq_backend.py  mistral_backend.py  openai_backend.py  xai_backend.py
db/: schema.sql
docs/: COPY-LOG.md  bug_report.md  design_log.md  index.html  test_results.md
electron/: main.js  preload.js
scripts/: generate_and_train_trigger_classifier.py
tests/: test_deepseek_backend.py  test_google_backend.py  test_groq_backend.py  test_memory_extractor.py  test_mistral_backend.py  test_model_incentive_router.py  test_scope_resolver.py  test_store_include_restart.py  test_trigger_detector.py  test_xai_backend.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+23 files in other folders)
