[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aua-veritas"
version = "0.1.0"
description = "AUA-Veritas — AI assistant with cross-model verification"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "spacy>=3.7.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "isort>=5.13",
]
